# exchange

./: CMakeLists.txt  README.md
cmake/: utils.cmake
contrib/: CMakeLists.txt
example/: CMakeLists.txt  hello_world.cpp
include/exchange/: actor_helper.h  actor_storage_a.h  actor_storage_ht.h  actor_storage_line.h  actor_storage_table.h  actor_storage_v.h  exchange.h  i_actor.h  i_message.h  iactor.h  iactor_storage.h  id.h  id_generator_forward.h  id_generator_reuse.h  id_generator_v.h  iexchange.h  iid_generator.h  imessage.h  message_helper.h  version.h
src/: actor_storage_a.cpp  actor_storage_ht.cpp  actor_storage_line.cpp  actor_storage_table.cpp  actor_storage_v.cpp  exchange.cpp  iactor.cpp  id_generator_forward.cpp  id_generator_reuse.cpp  id_generator_v.cpp
test/: CMakeLists.txt  test_actor_helper.cpp  test_actor_storage.cpp  test_exchange.cpp  test_id_generator.cpp  test_speed.cpp  test_template.cpp
test/common/: test_actor.cpp  test_actor.h  test_message.cpp  test_message.h  test_types.h  timer.cpp  timer.h
